# stonk_flask

./: .gitignore  README.md  pyproject.toml
.st_f/: pyvenv.cfg
