[project]
name = "stonk_flask"
version = "0.1.0"
description = "The basic app."
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "dash",
    "flask",
    "pandas",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.flit.module]
name = "flaskr"

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["flaskr", "tests"]
